[workspace]
members = [
    "runtime",
    "consensus",
    "crypto",
    "mempool",
    "governance",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fanora Team <dev@fanora-l1.io>"]
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
